--- a/src/components/backgrounds/reactbits/LineWaves.css
+++ b/src/components/backgrounds/reactbits/LineWaves.css
@@ -1,4 +1,9 @@
 .line-waves-container {
   width: 100%;
   height: 100%;
+  pointer-events: none;
+}
+
+.line-waves-container canvas {
+  pointer-events: none;
 }
